--- a/src/pages/newtab/index.html
+++ b/src/pages/newtab/index.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="color-scheme" content="dark light" />
 
-        <title>Clock of Clocks</title>
+        <title>Tabula</title>
 
         <link rel="stylesheet" href="../../assets/styles/styles.css" />
     </head>
