feat(clock): add Show Seconds setting and UI toggle
- Schema: introduce Settings.clock.showSeconds (default true)
- Defaults: merge and sanitize showSeconds
- App: toggle seconds visibility via clock display on settings change
- Options: add Show Seconds checkbox and bind to settings state

This enables users to show/hide the seconds digits on the New Tab clock and persists across sessions.

--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -90,7 +90,7 @@
           </header>
           <div class="panel__grid">
             <fieldset class="field field--inline">
-              <legend class="field__label">Time format</legend>
+              <legend class="field__label">Time</legend>
               <label class="choice">
                 <input type="radio" name="timeFormat" id="timeFormat24" value="24h" />
                 <span>24-hour</span>
@@ -98,6 +98,10 @@
               <label class="choice">
                 <input type="radio" name="timeFormat" id="timeFormat12" value="12h" />
                 <span>12-hour</span>
+              </label>
+              <label class="choice">
+                <input type="checkbox" id="showSeconds" />
+                <span>Show seconds</span>
               </label>
             </fieldset>
             <label class="field">
