chore: remove SVG icons and rasterization; use PNG icons end-to-end

--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -338,7 +338,7 @@
               </div>
               <div class="field">
                 <span class="field__label">Icon URL (optional)</span>
-                <input type="url" id="pinnedAddIcon" name="pinnedAddIcon" class="field__control" placeholder="https://example.com/icon.svg" />
+                <input type="url" id="pinnedAddIcon" name="pinnedAddIcon" class="field__control" placeholder="https://example.com/icon.png" />
               </div>
               <div class="pinned-manager__actions">
                 <button type="button" id="pinnedAddButton" class="tabula-button tabula-button--primary">Add pinned tab</button>
