feat(release v1.2.0): introduce Quick Notes and Quote of the Day widgets, enable drag-and-drop reordering for pinned tabs, and externalize the weather API key.

--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -639,6 +639,50 @@
                 Add quick todos right from the new tab.
               </p>
             </div>
+
+            <!-- Notes Widget -->
+            <div class="section__group">
+              <h3>Quick Notes</h3>
+              <label class="field field--toggle">
+                <span class="field__text">Enable notes widget</span>
+                <span class="toggle">
+                  <input
+                    type="checkbox"
+                    id="notesEnabled"
+                    name="notesEnabled"
+                    class="toggle__input"
+                  />
+                  <span class="toggle__track" aria-hidden="true">
+                    <span class="toggle__thumb"></span>
+                  </span>
+                </span>
+              </label>
+              <p class="section__hint">
+                A scratchpad for jotting down quick thoughts.
+              </p>
+            </div>
+
+            <!-- Quotes Widget -->
+            <div class="section__group">
+              <h3>Quote of the Day</h3>
+              <label class="field field--toggle">
+                <span class="field__text">Enable quotes widget</span>
+                <span class="toggle">
+                  <input
+                    type="checkbox"
+                    id="quotesEnabled"
+                    name="quotesEnabled"
+                    class="toggle__input"
+                  />
+                  <span class="toggle__track" aria-hidden="true">
+                    <span class="toggle__thumb"></span>
+                  </span>
+                </span>
+              </label>
+              <p class="section__hint">
+                Daily motivational quotes for inspiration.
+              </p>
+            </div>
           </section>
 
           <!-- Shortcuts Section -->
